--- a/style.css
+++ b/style.css
@@ -264,7 +264,7 @@ textarea {
         .about__content-title {
           font-size: 2.4rem; } }
     .about__content-details-para {
-      font-size: 1.8rem;
+      font-size: 1.2rem;
       color: grey;
       max-width: 60rem;
       line-height: 1.7;
@@ -274,7 +274,27 @@ textarea {
         margin: 0 3px; }
       .about__content-details-para:last-child {
         margin-bottom: 4rem; }
-
+        .swbc {
+          display: flex;
+          justify-content: space-between;
+          font-weight: 400;
+          font-size: 2.8rem;
+          margin-bottom: 3rem; }
+          @media only screen and (max-width: 37.5em) {
+            .swbc {
+              font-size: 2.4rem; } }
+              .swbc p{
+                font-size: 1.5rem;
+                opacity: .7;
+              }
+              .swbc1 {
+          
+                font-weight: 500;
+                font-size: 1.5rem;
+                margin-bottom: 3rem; }
+                @media only screen and (max-width: 37.5em) {
+                  .swbc1 {
+                    font-size: 2.4rem; } }
 .projects__row {
   display: grid;
   grid-template-columns: 1.5fr 1fr;
